# nKaruga

./: .gitignore  CMakeLists.txt
src/: Menu.cpp  Player.cpp  common.h  main.cpp  menu.hpp  n2DLib.c  n2DLib.h  utils.cpp
src/sfx/: list.h
